--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
+<p>J4deSPK : 61011058 Supakorn Wachirasarunkool</p>
+<p>J4deSPK : 61011058 ศุภากร วชิรศรัณกูล</p>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
