--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <h1>Hello World</h1>
 <p>J4deSPK : 61011058 Supakorn Wachirasarunkool</p>
 <p>J4deSPK : 61011058 ศุภากร วชิรศรัณกูล</p>
+
+<img scr="https://www.crazypng.com/download.php?url=http://pngimg.com/download/36022" alt="Smiley face" height="42" width="42"> 
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
