--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>J4deSPK : 61011058 Supakorn Wachirasarunkool</p>
 <p>J4deSPK : 61011058 ศุภากร วชิรศรัณกูล</p>
 
-<img scr="https://www.crazypng.com/download.php?url=http://pngimg.com/download/36022" alt="Smiley face" height="42" width="42"> 
+<img style="width:100px" src="https://avatars2.githubusercontent.com/u/501835">
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
