--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>J4deSPK : 61011058 Supakorn Wachirasarunkool</p>
 <p>J4deSPK : 61011058 ศุภากร วชิรศรัณกูล</p>
 
-<img style="width:100px" src="https://avatars2.githubusercontent.com/u/501835">
+<img style="width:100px" src="img/mouth_smile_PNG42.png">
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
